<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="6dp">

        <TextView
            android:id="@+id/team_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Team A Innings"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/scorecardTeamNameSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/team_two"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/team_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Team B Innings"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="@dimen/scorecardTeamNameSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/team_one"
            app:layout_constraintWidth_percent="0.5" />

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/team_two"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/batting_header_row"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="horizontal"
                    android:background="@color/colorSecondaryVariant"
                    >


                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/player_column"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/batsman"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/runs"
                            android:layout_width="@dimen/runs_size"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/bowlermargintopbottom"
                            android:layout_marginEnd="@dimen/bowlermarginend"
                            android:layout_marginBottom="@dimen/bowlermargintopbottom"
                            android:text="@string/r"
                            android:textAlignment="textEnd"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/balls"
                            android:layout_width="@dimen/runs_size"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/bowlermarginend"
                            android:layout_marginTop="@dimen/bowlermargintopbottom"
                            android:layout_marginBottom="@dimen/bowlermargintopbottom"
                            android:text="@string/b"
                            android:textStyle="bold"
                            android:textAlignment="textEnd"
                            android:textSize="20sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/fours"
                            android:layout_width="@dimen/runs_size"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/bowlermarginend"
                            android:layout_marginTop="@dimen/bowlermargintopbottom"
                            android:layout_marginBottom="@dimen/bowlermargintopbottom"
                            android:text="@string/_4s"
                            android:textStyle="bold"
                            android:textAlignment="textEnd"
                            android:textSize="20sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/sixes"
                            android:layout_width="@dimen/runs_size"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/bowlermarginend"
                            android:layout_marginTop="@dimen/bowlermargintopbottom"
                            android:layout_marginBottom="@dimen/bowlermargintopbottom"
                            android:text="@string/_6s"
                            android:textStyle="bold"
                            android:textAlignment="textEnd"
                            android:textSize="20sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/strike_rate"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:text="@string/s_r"
                            android:layout_marginTop="@dimen/bowlermargintopbottom"
                            android:layout_marginBottom="@dimen/bowlermargintopbottom"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:textSize="20sp" />

                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/batting_score_RV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/batting_header_row"
                    tools:listitem="@layout/batting_score_card" />

                <LinearLayout
                    android:id="@+id/bowling_header_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/options_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/batting_score_RV"
                    android:background="@color/colorSecondaryVariant"
                    android:orientation="horizontal"
                    >

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/bowler_column"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/bowler"
                            android:textStyle="bold"
                            android:textSize="20sp"

                            />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/overs_column"
                            android:layout_width="@dimen/runs_size"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/bowlermarginend"
                            android:layout_marginTop="@dimen/bowlermargintopbottom"
                            android:layout_marginBottom="@dimen/bowlermargintopbottom"
                            android:textAlignment="textEnd"
                            android:text="@string/o"
                            android:textStyle="bold"
                            android:textSize="20sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/maidens_column"
                            android:layout_width="@dimen/runs_size"
                            android:layout_height="wrap_content"
                            android:text="@string/m"
                            android:textStyle="bold"
                            android:layout_marginEnd="@dimen/bowlermarginend"
                            android:layout_marginTop="@dimen/bowlermargintopbottom"
                            android:layout_marginBottom="@dimen/bowlermargintopbottom"
                            android:textAlignment="textEnd"
                            android:textSize="20sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/runs_given"
                            android:layout_width="@dimen/runs_size"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/bowlermarginend"
                            android:layout_marginTop="@dimen/bowlermargintopbottom"
                            android:layout_marginBottom="@dimen/bowlermargintopbottom"
                            android:text="@string/r"
                            android:textStyle="bold"
                            android:textAlignment="textEnd"
                            android:textSize="20sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/wickets_column"
                            android:layout_width="@dimen/runs_size"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/bowlermarginend"
                            android:layout_marginTop="@dimen/bowlermargintopbottom"
                            android:layout_marginBottom="@dimen/bowlermargintopbottom"
                            android:text="@string/w"
                            android:textStyle="bold"
                            android:textAlignment="textEnd"
                            android:textSize="20sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/economy_column"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:text="@string/economy"
                            android:layout_marginTop="@dimen/bowlermargintopbottom"
                            android:layout_marginBottom="@dimen/bowlermargintopbottom"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:textSize="20sp" />
                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bowling_scoreRV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/bowling_header_row"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:listitem="@layout/bowling_score_card"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>