<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.viewpagershost.MatchDetailFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/match_graphic_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingHorizontal="10dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/league_logo"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:src="@drawable/versus"
                tools:ignore="ContentDescription" />
            <View
                android:layout_width="20dp"
                android:layout_height="0dp"
                />
            <TextView
                android:id="@+id/leagueNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                tools:text="@string/league_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorOnSecondary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="serif"
                android:gravity="center"
                android:layout_gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="3dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:gravity="start"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/team1flag"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/instagram_stories"
                    android:layout_gravity="center"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/team1Code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="team-1Code"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/team1Score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="150/10"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight=".4">

                <ImageView
                    android:id="@+id/vs"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                    android:src="@drawable/versus"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/upcoming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="cursive"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:text="Upcoming" />
                <TextView
                    android:id="@+id/countdown_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_gravity="center"
                    tools:text="2d day, 2d:2d:2d" />
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="5dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/team2flag"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/instagram_stories"
                    android:layout_gravity="center"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/team2code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="team-2code"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/team2Score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="150/10"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/match_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:background="@color/colorSecondaryVariant"
            android:fontFamily="serif-monospace"
            android:text="@string/Result"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabModeMD"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="500dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/match_graphic_card"
        app:tabIndicatorHeight="3.5dp"
        app:tabPadding="6dp"
        app:tabTextColor="@color/colorTextPrimary"
        app:tabSelectedTextColor="@color/colorPrimary"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/detailViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabModeMD"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>